--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
-﻿<Application x:Class="FS服装搭配专家v1._0.App"
+<Application x:Class="FS服装搭配专家v1._0.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FS服装搭配专家v1._0"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:FS服装搭配专家v1._0">
     <Application.Resources>
          
     </Application.Resources>
